section z-index fix

--- a/src/styles/2intro.scss
+++ b/src/styles/2intro.scss
@@ -1,6 +1,6 @@
 .intro {
   position: fixed;
-  z-index: 2;
+  z-index: 0;
   margin-top: 0.8rem;
   margin-bottom: 0.85rem;
   background-color: #8bd1f3;
